endpoint for updating secret value has been added
