# src/http/handlers/secrets.rs
@@ -5,7 +5,9 @@ use crate::{
         jwt_tokens::AccessTokenClaims,
     },
     models::{
-        http::secrets::{SecretEncryptionKey, SecretNames, SecretSettings, SecretValue},
+        http::secrets::{
+            SecretEncryptionKey, SecretNames, SecretSettings, SecretUpdateRequest, SecretValue,
+        },
         Encryption, StorageAndTopicKeys, StorageTopicAndSecretKeys,
     },
     policies::Permission,
@@ -29,7 +31,9 @@ pub fn create_router(app_state: AppState) -> Router {
         .route("/", get(get_secret_names_handler))
         .route(
             "/:secret_name",
-            post(create_secret_handler).get(read_secret_handler),
+            post(create_secret_handler)
+                .get(read_secret_handler)
+                .put(update_secret_handler),
         )
         .with_state(app_state)
 }
@@ -271,4 +275,89 @@ async fn read_secret_value(
         value: secret.get_current_secret_value(&secret_keyset)?,
         version: secret.cursor,
     })
+}
+
+async fn update_secret_handler(
+    claims: AccessTokenClaims,
+    TypedHeader(topic_key_header): TypedHeader<TopicKeyHeader>,
+    TypedHeader(secret_key_header): TypedHeader<SecretKeyHeader>,
+    Path((topic_name, secret_name)): Path<(String, String)>,
+    State(state): State<AppState>,
+    Json(update_request): Json<SecretUpdateRequest>,
+) -> Result<(), ResponseError> {
+    // checks
+    let policies = claims.policies;
+    policies.ensure_topic_access_permitted(&topic_name, Permission::Read)?;
+    policies.ensure_secret_access_permitted(&topic_name, &secret_name, Permission::Update)?;
+
+    validators::ensure_storage_is_unsealed(state.clone()).await?;
+
+    // actions
+    let external_topic_key = topic_key_header
+        .value
+        .unwrap_or(state.get_config().default_topic_key.clone());
+    let external_secret_key = secret_key_header
+        .value
+        .unwrap_or(state.get_config().default_secret_key.clone());
+
+    update_secret_value(
+        topic_name,
+        secret_name,
+        update_request.value,
+        external_topic_key,
+        external_secret_key,
+        state,
+    )
+    .await?;
+
+    Ok(())
+}
+
+async fn update_secret_value(
+    topic_name: String,
+    secret_name: String,
+    new_value: String,
+    external_topic_key: String,
+    external_secret_key: String,
+    state: AppState,
+) -> Result<(), ResponseError> {
+    let storage = state.get_storage_read().await;
+
+    // keys
+    let storage_key = storage.get_encryption_key()?;
+    let topic_key = hkdf::string_into_256_bit_key(external_topic_key)?;
+    let secret_key = hkdf::string_into_256_bit_key(external_secret_key)?;
+
+    // DAO objects
+    let db = state.get_db_conn();
+    let topic_dao = TopicDao::new(db.clone());
+    let secret_dao = SecretDao::new(db);
+
+    // getting topic
+    let topic_keyset = StorageAndTopicKeys {
+        storage_key,
+        topic_key: &topic_key,
+    };
+    let topic = topic_dao.find_by_name(&topic_name).await?;
+    topic.check_integrity(&topic_keyset)?;
+
+    if !topic.contains_secret_name(&secret_name) {
+        return Err(ResponseError::Secret(SecretError::NotFound));
+    }
+
+    // getting secret
+    let secret_keyset = StorageTopicAndSecretKeys {
+        storage_key,
+        topic_key: &topic_key,
+        secret_key: &secret_key,
+    };
+    let mut secret = secret_dao
+        .find_by_name(&topic.hashed_name, &secret_name)
+        .await?;
+    secret.check_integrity(&secret_keyset)?;
+
+    secret.update_secret_value(new_value, &secret_keyset)?;
+    secret_dao.update(&secret).await?;
+
+    Ok(())
 }
